<?xml version="1.0"?>
<package>
  <name>aicp</name>
  <version>0.0.0</version>
  <description>The aicp package</description>

  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bot_lcmgl</build_depend>
  <build_depend>octomap_utils</build_depend>
  <build_depend>octomap_lcmtypes</build_depend>
  <build_depend>pronto_vis</build_depend>
  <build_depend>concise_args</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>cloud_accumulate</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pointmatcher_ros</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>bot_lcmgl</run_depend>
  <run_depend>octomap_utils</run_depend>
  <run_depend>octomap_lcmtypes</run_depend>
  <run_depend>pronto_vis</run_depend>
  <run_depend>concise_args</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>cloud_accumulate</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pointmatcher_ros</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
