<?xml version="1.0"?>
<package>
  <name>aicp</name>
  <version>0.0.0</version>
  <description>The aicp package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>pointmatcher_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>octomap_ros</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>pointmatcher_ros</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>octomap_ros</run_depend>

  <export>
  </export>
</package>
