<?xml version="1.0"?>
<package>
  <name>aicp_core</name>
  <version>1.0.0</version>
  <description>AICP core package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
  </export>
</package>
