<?xml version="1.0"?>
<package>
  <name>aicp_ros</name>
  <version>0.0.1</version>
  <description>AICP ROS package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>aicp_core</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>aicp_core</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
