<?xml version="1.0"?>
<package>
  <name>aicp_lcm</name>
  <version>0.0.1</version>
  <description>AICP LCM package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>aicp_core</build_depend>
  <build_depend>aicp_srv</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>octomap_lcmtypes</build_depend>
  <build_depend>octomap_utils</build_depend>
  <build_depend>bot_core_lcmtypes</build_depend>
  <build_depend>pronto_vis</build_depend>
  <build_depend>cloud_accumulate</build_depend>
  <build_depend>concise_args</build_depend>
  <run_depend>aicp_core</run_depend>
  <run_depend>aicp_srv</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>octomap_lcmtypes</run_depend>
  <run_depend>octomap_utils</run_depend>
  <run_depend>bot_core_lcmtypes</run_depend>
  <run_depend>pronto_vis</run_depend>
  <run_depend>cloud_accumulate</run_depend>
  <run_depend>concise_args</run_depend>

  <export>
  </export>
</package>
