<?xml version="1.0"?>
<package>
  <name>aicp_ros</name>
  <version>0.0.0</version>
  <description>AICP ROS package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
